# decord

./: .gitignore  .gitmodules  CMakeList.txt  CMakeLists.txt  CMakeLists1.txt  README.md  a.py  b.py  data.txt  gpu.Dockerfile  list.txt
.github/workflows/: ccpp.yml  pypi.yml
cmake/: config.cmake
cmake/modules/: CUDA.cmake  FFmpeg.cmake  FindFFmpeg.cmake
cmake/util/: FindCUDA.cmake  FindCUDAArchFlags.cmake  FindFFmpeg.cmake  Util.cmake
docs/: conf.py  index.rst
docs/api/: index.rst
examples/: audio_reader.ipynb  av_reader.ipynb  flipping_a_pancake.mkv  video_loader.ipynb  video_reader.ipynb
include/decord/: audio_interface.h  av_interface.h  base.h  c_api.h  image_frame.h  ndarray.h  serializer.h  video_interface.h  video_reader.h  video_stream.h
include/decord/runtime/: c_backend_api.h  c_runtime_api.h  device_api.h  module.h  ndarray.h  node_base.h  packed_func.h  registry.h  serializer.h  threading_backend.h  util.h
python/: setup.py
python/decord/: __init__.py  audio_reader.py  av_reader.py  base.py  logging.py  ndarray.py  video_loader.py  video_reader.py
python/decord/_ffi/: README.md  base.py  function.py  libinfo.py  ndarray.py  runtime_ctypes.py
python/decord/_ffi/_ctypes/: function.py  ndarray.py  types.py
python/decord/_ffi/_cython/: base.pxi  core.pyx  function.pxi  ndarray.pxi  node.pxi
python/decord/bridge/: __init__.py  mxnet.py  paddle.py  tf.py  torchdl.py  tvm.py  utils.py
python/decord/data/: __init__.py  base_action.py  dataloader.py
python/decord/data/kinetics/: kinetics400_action.py  kinetics_human_action.py
python/decord/data/transforms/: action.py
python/decord/function/: __init__.py  base.py
src/: c_api_error.h  ndarray.cc  video_reader.cc  video_reader.cpp  video_reader_impl.h
src/audio/: audio_interface.cc  audio_reader.cc  audio_reader.h  audio_stream.cc  audio_stream.h
src/av_wrapper/: av_reader.h
src/backend/: ffmpeg.cpp  ffmpeg.h
src/cutter/: README.md
src/decoder/: README.md  ffmpeg.cc  ffmpeg.cpp  ffmpeg.h
src/improc/: README.md  improc.cu  improc.h
src/runtime/: c_runtime_api.cc  cpu_device_api.cc  dso_module.cc  file_util.cc  file_util.h  meta_data.h  module.cc  module_util.cc  module_util.h  ndarray.cc  pack_args.h  registry.cc  runtime_base.h  str_util.cc  str_util.h  system_lib_module.cc  thread_pool.cc  thread_storage_scope.h  threading_backend.cc  workspace_pool.cc  workspace_pool.h
src/runtime/cuda/: cuda_common.h  cuda_device_api.cc  cuda_module.cc  cuda_module.h
src/sampler/: random_file_order_sampler.cc  random_file_order_sampler.h  random_sampler.cc  random_sampler.h  sampler_interface.h  sequential_sampler.cc  sequential_sampler.h  smart_random_sampler.cc  smart_random_sampler.h  smart_sampler.h
src/utils/: cu_utils.h  ndarray_pool.h
src/video/: logging.cc  storage_pool.cc  storage_pool.h  threaded_decoder_interface.h  video_interface.cc  video_loader.cc  video_loader.h  video_reader.cc  video_reader.h
src/video/ffmpeg/: README.md  ffmpeg_common.h  filter_graph.cc  filter_graph.h  remux.cc  remux.h  threaded_decoder.cc  threaded_decoder.h  video_loader.cc  video_loader.h  video_reader.cc  video_reader.h
src/video/nvcodec/: LICENSE  README.md  cu_decoder.h  cu_decoder_impl.cc  cu_decoder_impl.h  cu_mapped_frame.cc  cu_mapped_frame.h  cu_parser.h  cu_stream.cc  cu_stream.h  cu_texture.cc  cu_texture.h  cu_threaded_decoder.cc  cu_threaded_decoder.h  cu_utils.h  cuda_context.cc  cuda_context.h  cuda_decoder_impl.cc  cuda_decoder_impl.h  cuda_mapped_frame.cc  cuda_mapped_frame.h  cuda_parser.cc  cuda_parser.h  cuda_storage_pool.h  cuda_stream.cc  cuda_stream.h  cuda_texture.cc  cuda_texture.h  cuda_threaded_decoder.cc  cuda_threaded_decoder.h
src/video/nvcodec/nvcuvid/: cuviddec.h  nvcuvid.h
tests/benchmark/: bench_decord.py  bench_opencv.py  bench_pyav.py  cv2.npy
tests/cpp/audio/: test_ffmpeg_audio_reader.cc
tests/cpp/video/: test_c.c  test_ffmpeg_video_reader.cc
tests/python/unittests/: test_audio_reader.py  test_audio_reader_temp.py  test_av_reader.py  test_bridges.py  test_video_reader.py
tests/test_data/: unordered.mov  video_0.mov  video_180.mov  video_270.mov  video_90.mov
tests/utils/: generate_test_videos.cmd  generate_test_videos.sh
tools/: build_ffmpeg_manylinux2010.sh  build_macos_10_9.sh  build_manylinux2010.sh  update_version.py
